# python-boilerplate-project

./: .gitignore  README.md  pyproject.toml
app/: db.py  dependencies.py  exception_handlers.py  logger_config.py  main.py  middlewares.py  settings.py
app/auth/: models.py  repository.py  router.py  service.py  views.py
app/blog/: models.py  repository.py  router.py  views.py
migrations/app/: 0_20250202010502_init.py  1_20250209015220_add-user.py
src/: main.py
tests/: test_main.py
